--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -20,8 +20,8 @@ spring:
       max-total: 5                                          # 最大连接数
       max-wait-millis: 200                                  # 等待连接获取的最大超时时间
 mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: cn.zzsxt.springcloud.entity    # 所有Entity别名类所在包
+  config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
+  type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
   mapper-locations:
   - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 eureka:
@@ -50,10 +50,10 @@ spring:
       max-total: 5                                          # 最大连接数
       max-wait-millis: 200                                  # 等待连接获取的最大超时时间
 mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: cn.zzsxt.springcloud.entity    # 所有Entity别名类所在包
-  mapper-locations:
-  - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
+   config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
+   type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
+   mapper-locations:
+    - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url:
