添加了config客户端的配置文件

--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -22,8 +22,7 @@ spring:
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
   type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
-  mapper-locations:
-  - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
+  mapper-locations: classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url:
@@ -52,8 +51,7 @@ spring:
 mybatis:
    config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
    type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
-   mapper-locations:
-    - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
+   mapper-locations: classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url:
