--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -8,9 +8,9 @@ spring:
    profiles: dev
    application:
      name: microservicecloud-config-dept-client
-   datasource:
+  datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
+    driver-class-name: com.mysql.jdbc.Driver                # mysql驱动包
     url: jdbc:mysql://localhost:3306/cloudDB01              # 数据库名称
     username: root
     password: root
@@ -22,7 +22,7 @@ spring:
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
   type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
-  mapper-locations: classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
+  mapper-locations: classpath:mybatis/mappers/**/*.xml                       # mapper映射文件
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url:
@@ -37,10 +37,10 @@ spring:
    profiles: test
    application:
      name: microservicecloud-config-dept-client
-   datasource:
+ datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-    url: jdbc:mysql://localhost:3306/cloudDB02             # 数据库名称
+    driver-class-name: com.mysql.jdbc.Driver                # mysql驱动包
+    url: jdbc:mysql://localhost:3306/cloudDB01              # 数据库名称
     username: root
     password: root
     dbcp2:
@@ -49,9 +49,9 @@ spring:
       max-total: 5                                          # 最大连接数
       max-wait-millis: 200                                  # 等待连接获取的最大超时时间
 mybatis:
-   config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
-   type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
-   mapper-locations: classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
+  config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
+  type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
+  mapper-locations: classpath:mybatis/mappers/**/*.xml                       # mapper映射文件
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url:
