--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -3,11 +3,17 @@ spring:
     active: dev
 ---
 server:
-  port: 8001 
+  port: 8001
+
+mybatis:
+  config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
+  type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
+  mapper-locations: classpath:mybatis/mappers/**/*.xml                       # mapper映射文件
+
 spring:
-   profiles: dev
-   application:
-     name: microservicecloud-config-dept-client
+  profiles: dev
+  application:
+    name: microservicecloud-config-dept-client
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.mysql.jdbc.Driver                # mysql驱动包
@@ -19,28 +25,39 @@ spring:
       initial-size: 5                                       # 初始化连接数
       max-total: 5                                          # 最大连接数
       max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+#将服务提供者注册到eureka中心
+eureka:
+  client: #客户端注册进eureka服务列表内
+    service-url:
+      defaultZone: http://localhost:7001/eureka/
+  instance:
+    instance-id: dept-8001.com #微服务在eureka注册的id
+    prefer-ip-address: true #访问路径可以显示IP地址
+
+#info信息
+info:
+  app.name: zzsxt-microservicecloud
+  company.name: www.zzsxt.cn
+  build.artifactId: $project.artifactId$  # 引用当前项目的artifactId
+  build.version: $project.version$  #引用当前项目的version
+
+---
+server:
+  port: 8001
+
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
   type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
   mapper-locations: classpath:mybatis/mappers/**/*.xml                       # mapper映射文件
-eureka:
-  client: #客户端注册进eureka服务列表内
-    service-url:
-      defaultZone:  http://eureka7001.com:7001/eureka/
-  instance:
-    instance-id: dept-8001.com
-    prefer-ip-address: true
----
-server:
-  port: 8001 
+
 spring:
-   profiles: test
-   application:
-     name: microservicecloud-config-dept-client
- datasource:
+  profiles: test
+  application:
+    name: microservicecloud-config-dept-client
+  datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: com.mysql.jdbc.Driver                # mysql驱动包
-    url: jdbc:mysql://localhost:3306/cloudDB01              # 数据库名称
+    url: jdbc:mysql://localhost:3306/cloudDB02              # 数据库名称
     username: root
     password: root
     dbcp2:
@@ -48,19 +65,18 @@ spring:
       initial-size: 5                                       # 初始化连接数
       max-total: 5                                          # 最大连接数
       max-wait-millis: 200                                  # 等待连接获取的最大超时时间
-mybatis:
-  config-location: classpath:mybatis/mybatis-config.xml        # mybatis配置文件所在路径
-  type-aliases-package: cn.zzsxt.model    # 所有Entity别名类所在包
-  mapper-locations: classpath:mybatis/mappers/**/*.xml                       # mapper映射文件
+#将服务提供者注册到eureka中心
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url:
-      defaultZone:  http://eureka7001.com:7001/eureka/
+      defaultZone: http://localhost:7001/eureka/
   instance:
-    instance-id: dept-8001.com
-    prefer-ip-address: true    
-info: 
+    instance-id: dept-8001.com #微服务在eureka注册的id
+    prefer-ip-address: true #访问路径可以显示IP地址
+
+#info信息
+info:
   app.name: zzsxt-microservicecloud
   company.name: www.zzsxt.cn
-  build.artifactId: $project.artifactId$
-  build.version: $project.version$    
+  build.artifactId: $project.artifactId$  # 引用当前项目的artifactId
+  build.version: $project.version$  #引用当前项目的version
